<resources>
    <string name="app_name">Viewpaperfragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1_fragment">Ngoc Trinh va Hoang Kieu chia tay roi anh em ei</string>
    <string name="tab2_fragment">Ngoc Trinh - hinh anh lam tan nat bao con tim may thang FA</string>
    <string name="tab3_fragment">Ngoc Trinh Tha thinh tren may bay ba con oi</string>
    <string name="chiasechiatay">Cách đây vài giờ, tỷ phú Hoàng Kiều đăng thông báo về lý do chia tay Ngọc Trinh trên fanpage của ông.Trong những dòng tâm sự, ông viết: Tôi đã dành cả tình yêu của mình cho em với ý muốn được gắn bó lâu dài cùng nhau trong suốt phần đời còn lại của mình. Nhưng Ngọc Trinh chỉ muốn có một cuộc tình ngắn và tạm thời, điều mà trước đó em đã viết trên Instagram của mình. Do vậy, em không còn xứng đáng với tình yêu và sự quan tâm của tôi nữa</string>
    <string name="tieudechiatay">Tỷ phú 72 tuổi chia sẻ ông chấm dứt với người yêu 27 tuổi vì cô xem quan hệ của cả hai là tạm thời chứ không trọn đời.</string>
    <string name="ngoctrinhdep">Là một trong những mỹ nhân rất siêng năng chăm sóc hình ảnh cá nhân, mới đây Ngọc Trinh vừa thực hiện một bộ ảnh long lanh với vẻ đẹp khiến nhiều người thổn thức. Người đẹp diện những chiếc váy nhẹ nhàng nhưng không kém phần nổi bật với làn da trắng không tì vết của mình. Hình ảnh cũng đã khiến nhiều người phải trầm trồ khi gần như đã khoe được lợi thế hình thể của nữ hoàng nội y</string>
    <string name="tieude_ngoctrinhdep">Ngọc Trinh khoe vẻ đẹp ngây ngất lúc mong manh, khi gợi cảm</string>
    <string name="ngoctrinhdep2">Khuôn mặt nổi bật nhỏ nhắn toát lên sự dáng yêu ngây thơ, ngoài ra với làn da trắng nõn nà, thân hình nóng bỏng Ngọc Trinh luôn biết lựa chọn cho mình những bộ váy tinh tế khiến cho cô trở nên gợi cảm và xinh. Vóc dáng gợi cảm, nuột nà trong những bộ đầm gợi cảm của Ngọc Trinh khiến nhiều đấng mày râu... ngây ngất.</string>
    <string name="title1">Ngọc Trinh và Hoàng Kiều chình thức chia tay nhau</string>
    <string name="title2">Ngoc Trinh khóc nức nở vì Đại Gia Hoàng Kiều đã bỏ lại cô</string>
    <string name="title3">Ngoc Trinh -cô nàng có thân hình quyến rũ hút hồn bao nhiêu chàng trai</string>
</resources>
