<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    tools:context="com.example.admin.viewpaperfragment.TabFragment1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:src="@drawable/ngoctrinh_hoangkieu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:text="@string/title1"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:id="@+id/editText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_tab_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:paddingTop="0dp"
                android:src="@drawable/ngoctrinh_3"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_horizontal"
                android:ems="15"
                android:gravity="center"
                android:text="@string/title2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_tab_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:paddingTop="0dp"
                android:src="@drawable/ngoctrinh_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title3"
                android:textSize="15dp"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
